Implemented JSON interfaces for most model data
