# api/VarietiesView.py
@@ -1,10 +1,10 @@
 from sqlalchemy import text
-from sharedQueries import ref_name, display_name, exec_query
+from sharedQueries import ref_name, display_name, execute_query
 from .BaseView import BaseView
-from i18n import is_supported, translate
-from i18nTerms import Terms
-from sharedResponses import language_not_supported_response, response
-from templates import farms_template
+from sharedResponses import internal_error_response
+from flask import json
+import logging
+import traceback
 
 class VarietiesView(BaseView):
 
@@ -12,16 +12,18 @@ class VarietiesView(BaseView):
         query = text(
             'SELECT name AS ' + ref_name + ', display_name AS ' + display_name +
             ' FROM variety' +
-            ' ORDER BY name;'
+            ' ORDER BY display_name;'
         )
-        return exec_query(connection, query)
+        return execute_query(connection, query)
 
     def search(self, language):
-        if not is_supported(language):
-            return language_not_supported_response()
+        try:
+            # language parameter is not used but kept in the signature for conistency in the REST endpoints
+            varieties = []
+            with self.open_connection() as connection:
+                varieties = self.get_varieties(connection)
+            return json.jsonify(varieties)
 
-        varieties = []
-        with self.open_connection() as connection:
-            varieties = self.get_varieties(connection)
-        title = translate(Terms.VARIETIES_TITLE, language)
-        return response(farms_template, title, language, varieties)
+        except Exception:
+            logging.error(traceback.format_exc())
+            return internal_error_response()
